PDE_solver/jitfailure-dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10/error.log
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp: In member function ‘virtual void dolfin::dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp:62:60: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = 1 + (q / 2 / DOLFIN_PI) * x / (x[0]**2 + x[1]**2);
                                                            ^
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp:62:70: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = 1 + (q / 2 / DOLFIN_PI) * x / (x[0]**2 + x[1]**2);
                                                                      ^
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp:63:49: error: ‘y’ was not declared in this scope
           values[1] = 0 + (q / 2 / DOLFIN_PI) * y / (x[0]**2 + x[1]**2);
                                                 ^
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp:63:49: note: suggested alternative: ‘yn’
           values[1] = 0 + (q / 2 / DOLFIN_PI) * y / (x[0]**2 + x[1]**2);
                                                 ^
                                                 yn
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp:63:60: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[1] = 0 + (q / 2 / DOLFIN_PI) * y / (x[0]**2 + x[1]**2);
                                                            ^
/tmp/tmpfi5b_cua/dolfin_expression_28e549f6d0c0c6f84ad4d0558d314d10.cpp:63:70: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[1] = 0 + (q / 2 / DOLFIN_PI) * y / (x[0]**2 + x[1]**2);
                                                                      ^
